# Cellular-Automata-Slimemold

./: .gitignore  .tool-versions  README.md  RESTRUCTURE.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/config/: __init__.py  constants.py  settings.py
app/core/: __init__.py  algorithms.py  automata.py
app/rendering/: __init__.py  colors.py  effects.py  renderer.py
app/ui/components/: __init__.py  button.py  button_config.py  menu.py  slider.py  switch.py
app/utils/: __init__.py  cache.py  helpers.py  math_utils.py
